--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>es.uniovi.asw</groupId>
-	<artifactId>participants0</artifactId>
-	<name>participants0</name>
+	<artifactId>participants1b</artifactId>
+	<name>participants1b</name>
 	<version>0.0.1</version>
 
 	<parent>
