--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
     		<artifactId>h2</artifactId>
     		<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+    		<artifactId>mockito-core</artifactId>
+    		<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<properties>
