--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
     		<artifactId>h2</artifactId>
     		<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<scope>test</scope>
+		</dependency>	
 	</dependencies>
 
 	<properties>
